phone layout bug fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,22 +30,24 @@
   
   /* The circle on the bottom of the device */
   .smartphone:after {
-    content: '';
-    display: block;
-    width: 35px;
-    height: 35px;
-    position: absolute;
-    left: 50%;
-    bottom: -65px;
-    transform: translate(-50%, -50%);
-    background: #333;
-    border-radius: 50%;
+    @include desktop {
+      content: '';
+      display: block;
+      width: 35px;
+      height: 35px;
+      position: absolute;
+      left: 50%;
+      bottom: -65px;
+      transform: translate(-50%, -50%);
+      background: #333;
+      border-radius: 50%;
+    }
   }
   
   /* The screen (or content) of the device */
   .smartphone .content {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     // background: white;
     overflow:scroll;
   }
